--- a/Assignment1/css/styles.css
+++ b/Assignment1/css/styles.css
@@ -68,11 +68,12 @@ main .desc1 .hdrButton{
 
 }
 .hhdr{
-  font-weight: 800;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 48px;
   color: #2A0E05;
 }
 .phdr{
+  font-family: 'Open Sans', sans-serif;
   line-height: 30px;
   font-size: 18px;
   color: #79706E;
@@ -85,6 +86,9 @@ main .desc1 .hdrButton{
 }
 .hdrImg{
   margin: 0 -99px;
+}
+.hdrButton{
+  font-family: 'Open Sans', sans-serif;
 }
 /*************************
 * Second section of content
@@ -103,13 +107,14 @@ main .desc1 .hdrButton{
   height: 55px;
   left: 190px;
   top: 698px;
-  font-weight: 800;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 38px;
   line-height: 50px;
   text-align: center;
   color: #2A0E05;
 }
 .pmiddle1{
+  font-family: 'Open Sans', sans-serif;
   margin-top: 2rem;
   text-align: center;
   width: 730px;
@@ -137,7 +142,7 @@ main .desc1 .hdrButton{
   height: 59px;
   left: 105px;
   top: 1386px;
-  font-weight: 800;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 38px;
   line-height: 50px;
   text-align: center;
@@ -145,6 +150,7 @@ main .desc1 .hdrButton{
   color: #2A0E05;
 }
 .pmiddle2{
+  font-family: 'Open Sans', sans-serif;
   margin-top: 1rem;
   text-align: center;
   width: 415px;
@@ -176,12 +182,13 @@ main .desc1 .hdrButton{
   height: 107px;
   left: 738px;
   top: 1772px;
-  font-weight: 800;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 48px;
   line-height: 50px;
   color: #2A0E05;
 }
 .pmiddle3{
+  font-family: 'Open Sans', sans-serif;
   width: 437px;
   height: 99px;
   left: 738px;
@@ -204,6 +211,7 @@ main .mid3 .midButton{
   cursor: pointer;
   left: 738px;
   top: 2032px;
+  font-family: 'Open Sans', sans-serif;
 
 }
 /***********
@@ -234,13 +242,15 @@ footer .desc6 .ftrButton{
   font-size: 18px;
   margin-top: 2rem;
   cursor: pointer;
-
+  font-family: 'Open Sans', sans-serif;
 }
 .hftr{
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 42px;
   color: #ffffff;
 }
 .pftr{
+  font-family: 'Open Sans', sans-serif;
   margin-top: 2rem;
   font-size: 18px;
   color: #ffffff;
