added new changes

--- a/Assignment2/scss/_signup.scss
+++ b/Assignment2/scss/_signup.scss
@@ -86,6 +86,7 @@ form {
     border-color: $button-color;
     color: $background-color;
     background-color: $button-color;
+    text-decoration: none;
     @include button($width: 339px);
   }
 
